<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Contact">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createCont"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nameText"
            android:layout_toEndOf="@+id/nameText"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/surnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/surname"
            android:layout_below="@+id/editText_name"
            android:layout_alignParentStart="true"  />
        <EditText
            android:id="@+id/editText_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/surnameText"
            android:layout_toEndOf="@+id/surnameText"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:layout_below="@+id/editText_surname"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_surname"
            android:layout_toEndOf="@+id/emailText"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/pseudoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pseudo"
            android:layout_below="@+id/editText_email"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/editText_pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/pseudoText"
            android:layout_toEndOf="@+id/pseudoText"
            android:inputType="textPersonName"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        android:layout_marginTop="76dp" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        app:layout_constraintEnd_toStartOf="@id/btn_create"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="76dp" />

</androidx.constraintlayout.widget.ConstraintLayout>