<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    tools:context=".DrinkAdapter">

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameDrink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cocaText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/category"
        app:layout_constraintEnd_toStartOf="@id/quantityText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintBottom_toTopOf="@id/image"
        android:background="@android:color/black" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cocaText"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/cocaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coca"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintEnd_toStartOf="@id/choiceBtn"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <RadioButton
        android:id="@+id/choiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cocaText"
        app:layout_constraintEnd_toStartOf="@id/quantity"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Spinner
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/choiceBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:entries="@array/quantityNumbers"/>


</androidx.constraintlayout.widget.ConstraintLayout>